syntax = "proto3";

package dnf.v1;

// Go代码生成选项
option go_package = "github.com/pixb/DnfGameServer/dnf-go-client/gen/dnf/v1;dnfv1";

// Java代码生成选项（重要）
option java_multiple_files = true;  // 为每个消息生成独立的Java文件
option java_package = "com.dnfm.mina.protobuf.generated";  // 指定Java包名
option java_outer_classname = "FriendProto";  // 指定外层类名

// 好友列表请求
message FriendListRequest {
  int32 character_id = 1;       // 角色ID
  int32 page = 2;                // 页码
  int32 page_size = 3;           // 每页数量
}

// 好友信息
message FriendInfo {
  int32 character_id = 1;       // 好友角色ID
  string character_name = 2;     // 好友角色名称
  int32 level = 3;               // 好友角色等级
  int32 job = 4;                 // 好友角色职业
  int32 online_status = 5;       // 在线状态
  int64 last_login_time = 6;      // 最后登录时间
  string server_name = 7;         // 服务器名称
}

// 好友列表响应
message FriendListResponse {
  int32 error = 1;              // 错误码
  int32 character_id = 2;       // 角色ID
  repeated FriendInfo friends = 3;  // 好友列表
  int32 total_count = 4;         // 总好友数
  int32 page = 5;                // 当前页码
  int32 page_size = 6;           // 每页数量
}

// 好友添加请求
message FriendAddRequest {
  int32 character_id = 1;       // 角色ID
  int32 friend_character_id = 2;  // 好友角色ID
  string friend_name = 3;        // 好友角色名称
  string verify_message = 4;      // 验证消息
}

// 好友添加响应
message FriendAddResponse {
  int32 error = 1;              // 错误码
  int32 character_id = 2;       // 角色ID
  int32 friend_character_id = 3;  // 好友角色ID
  bool success = 4;              // 是否成功
  string message = 5;            // 提示消息
}

// 好友删除请求
message FriendDeleteRequest {
  int32 character_id = 1;       // 角色ID
  int32 friend_character_id = 2;  // 好友角色ID
}

// 好友删除响应
message FriendDeleteResponse {
  int32 error = 1;              // 错误码
  int32 character_id = 2;       // 角色ID
  int32 friend_character_id = 3;  // 好友角色ID
  bool success = 4;              // 是否成功
  string message = 5;            // 提示消息
}

// 好友消息请求
message FriendMessageRequest {
  int32 character_id = 1;       // 角色ID
  int32 friend_character_id = 2;  // 好友角色ID
  string message = 3;            // 消息内容
  int64 send_time = 4;            // 发送时间
}

// 好友消息响应
message FriendMessageResponse {
  int32 error = 1;              // 错误码
  int32 character_id = 2;       // 角色ID
  int32 friend_character_id = 3;  // 好友角色ID
  bool success = 4;              // 是否成功
  string message = 5;            // 提示消息
  int64 send_time = 6;            // 发送时间
}

// 好友消息通知
message FriendMessageNotify {
  int32 from_character_id = 1;   // 发送者角色ID
  string from_character_name = 2; // 发送者角色名称
  int32 to_character_id = 3;     // 接收者角色ID
  string message = 4;            // 消息内容
  int64 send_time = 5;            // 发送时间
}
